cut over to long / int